added login route

--- a/public/login.html
+++ b/public/login.html
@@ -23,9 +23,9 @@ EDIT ON
                 <a href="#">Reset your password?</a>
                 <a href="#">Register</a>
             </div>
-        </form><!-- form -->
+        </form>
         
-    </section><!-- content -->
-</div><!-- container -->
+    </section>
+</div>
 </body>
 </html>
