Add registration form

--- a/public/login.html
+++ b/public/login.html
@@ -21,11 +21,12 @@ EDIT ON
             <div>
                 <input type="submit" value="Log in" />
                 <a href="#">Reset your password?</a>
-                <a href="#">Register</a>
+                <a href="/public/assets/js/registration.js">Register</a>
             </div>
         </form>
-        
     </section>
 </div>
+
+<script src="assets/js/login.js"></script>
 </body>
 </html>
