--- a/public/login.html
+++ b/public/login.html
@@ -21,7 +21,7 @@ EDIT ON
             <div>
                 <input type="submit" value="Log in" />
                 <a href="#">Reset your password?</a>
-                <a href="#">Register</a>
+                <a href="/">Register</a>
             </div>
         </form>
         
